Improved temperature writing to db

--- a/controller/static/index.html
+++ b/controller/static/index.html
@@ -114,11 +114,11 @@ $(document).ready(function() {
                                 },
                                 series: [
                                 {
-                                    name: 'Sensor #1',
+                                    name: 'Ambient Temperature',
                                     data: seriesData1
                                 },
                                 {
-                                    name: 'Sensor #2',
+                                    name: 'Fermentation Vessel',
                                     data: seriesData2
                                 },
                                 {
